build/log/idf_py_stdout_output_20956
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\shema\OneDrive\Desktop\esp_puf_s3\build\bootloader && C:\Users\shema\.espressif\python_env\idf6.0_py3.14_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/shema/OneDrive/Desktop/esp_puf_s3/build/bootloader/bootloader.bin"
Bootloader binary size 0x5270 bytes. 0x2d90 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\shema\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DESP_PSA_ITS_AVAILABLE -DIDF_VER=\"v6.0.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DMBEDTLS_MAJOR_VERSION=4 -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DTF_PSA_CRYPTO_USER_CONFIG_FILE=\"mbedtls/esp_config.h\" -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/shema/OneDrive/Desktop/esp_puf_s3/build/config -IC:/Users/shema/OneDrive/Desktop/esp_puf_s3/main -IC:/Users/shema/OneDrive/Desktop/esp_puf_s3/main/capture -IC:/Users/shema/OneDrive/Desktop/esp_puf_s3/main/integrity -IC:/Users/shema/OneDrive/Desktop/esp_puf_s3/main/reconcile -IC:/esp/esp-idf/components/esp_libc/platform_include -IC:/esp/esp-idf/components/freertos/config/include -IC:/esp/esp-idf/components/freertos/config/include/freertos -IC:/esp/esp-idf/components/freertos/config/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/esp-idf/components/esp_hw_support/etm/include -IC:/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/esp-idf/components/esp_hw_support/modem/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/heap/tlsf -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32s3 -IC:/esp/esp-idf/components/soc/esp32s3/include -IC:/esp/esp-idf/components/soc/esp32s3/register -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/hal/esp32s3/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/esp32s3/include -IC:/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/esp/esp-idf/components/esp_rom/esp32s3 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/esp_stdio/include -IC:/esp/esp-idf/components/xtensa/esp32s3/include -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/deprecated_include -IC:/esp/esp-idf/components/esp_hal_gpio/include -IC:/esp/esp-idf/components/esp_hal_gpio/esp32s3/include -IC:/esp/esp-idf/components/esp_hal_usb/include -IC:/esp/esp-idf/components/esp_hal_usb/esp32s3/include -IC:/esp/esp-idf/components/esp_hal_pmu/include -IC:/esp/esp-idf/components/esp_hal_pmu/esp32s3/include -IC:/esp/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/esp-idf/components/esp_hal_ana_conv/esp32s3/include -IC:/esp/esp-idf/components/esp_hal_dma/include -IC:/esp/esp-idf/components/esp_hal_dma/esp32s3/include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/esp-idf/components/efuse/include -IC:/esp/esp-idf/components/efuse/esp32s3/include -IC:/esp/esp-idf/components/esp_security/include -IC:/esp/esp-idf/components/esp_hal_security/esp32s3/include -IC:/esp/esp-idf/components/esp_hal_security/include -IC:/esp/esp-idf/components/nvs_flash/include -IC:/esp/esp-idf/components/esp_partition/include -IC:/esp/esp-idf/components/esp_blockdev/include -IC:/esp/esp-idf/components/mbedtls/port/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/library -IC:/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/core -IC:/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/src -IC:/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/esp/esp-idf/components/mbedtls/port/psa_driver/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/everest/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/p256-m @"C:/Users/shema/OneDrive/Desktop/esp_puf_s3/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/shema/OneDrive/Desktop/esp_puf_s3=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/shema/OneDrive/Desktop/esp_puf_s3/main/main.c
C:/Users/shema/OneDrive/Desktop/esp_puf_s3/main/main.c:2:5: error: data definition has no type or storage class [-Werror]
    2 |     nvs_flash_erase();
      |     ^~~~~~~~~~~~~~~
C:/Users/shema/OneDrive/Desktop/esp_puf_s3/main/main.c:2:5: error: type defaults to 'int' in declaration of 'nvs_flash_erase' [-Wimplicit-int]
cc1.exe: all warnings being treated as errors
ninja: build stopped: subcommand failed.
